syntax = "proto3";

package booking;

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBookingDetails(GetBookingDetailsRequest) returns (BookingDetailsResponse);
  rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse);
  rpc CancelBooking(CancelBookingRequest) returns (CancelBookingResponse);
  rpc UpdateBookingStatus(UpdateBookingStatusRequest) returns (UpdateBookingStatusResponse);
}

message CreateBookingRequest {
  string user_id = 1;
  string facility_id = 2;
  string timeslot = 3;
  double price = 4;
}

message CreateBookingResponse {
  string booking_id = 1;
  string status = 2;
}

message GetBookingDetailsRequest {
  string booking_id = 1;
}

message BookingDetailsResponse {
  string booking_id = 1;
  string user_id = 2;
  string facility_id = 3;
  string timeslot = 4;
  double price = 5;
  string status = 6;
}

message ListBookingsRequest {
  string user_id = 1;
}

message ListBookingsResponse {
  repeated BookingDetails bookings = 1;
}

message CancelBookingRequest {
  string booking_id = 1;
}

message CancelBookingResponse {
  string status = 1;
}

message UpdateBookingStatusRequest {
  string booking_id = 1;
  string status = 2;
}

message UpdateBookingStatusResponse {
  string status = 1;
}
